dist_man1_MANS=

if BUILD_ALPHACASHD
  dist_man1_MANS+=alphacashd.1
endif

if ENABLE_QT
  dist_man1_MANS+=alphacash-qt.1
endif

if BUILD_ALPHACASH_CLI
  dist_man1_MANS+=alphacash-cli.1
endif

if BUILD_ALPHACASH_TX
  dist_man1_MANS+=alphacash-tx.1
endif

if BUILD_ALPHACASH_UTIL
  dist_man1_MANS+=alphacash-util.1
endif

if ENABLE_WALLET
if BUILD_ALPHACASH_WALLET
  dist_man1_MANS+=alphacash-wallet.1
endif
endif
